@@ -1,3 +1,10 @@
+2005-11-28  Christian Persch  <chpe@cvs.gnome.org>
+
+	* configure.ac:
+	* m4/gecko.m4:
+
+	Updated.
+
 2005-11-26  Christian Persch  <chpe@cvs.gnome.org>
 
 	* src/main.cpp:
